Basic movements are established. Control the dot with WASD keys, has warp around ability. Refreshes every 1/10 second. No actual snake game yet. Need massive changes to keep track of the "snake" for dynamic resizability. Will likely implement an array to track

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 
+.container {
+    display: grid;
+    height: 400px;
+    width: 400px;
+    border: 1px solid black;
+    grid-template-columns: repeat(24,auto);
+    grid-template-rows: repeat(24,auto);
+    margin: auto;
+}
+
