Added drop down menu to specify speed, display score at the end.

--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,14 @@
     width:157px;
     padding: 30px;
 }
+#spad
+{
+    background-color: #FB6376;
+    color: white;
+    margin-top: 25px;
+}
+#speed
+{
+    
+    margin-left: 125px;
+}
